--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "normalize.css": "^8.0.1",
     "pigeon-maps": "^0.21.3",
     "react": "^18.2.0",
