--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pigeon-maps": "^0.21.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
